updated style.css, +buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="timer-box">
         <h3>Current Quiz Time:</h3>
         <h2 id="quiz-timer">0</h2>
-        <p>Every 15 seconds = +5 second penalty!</p>
+        <p>Every 15 seconds = -1 point penalty!</p>
       </div>
 
       <div id="score-box">
@@ -33,8 +33,12 @@
         <div id="question-box">
           <h3>Click 'Start Game' to begin</h3>
         </div>
-        <div id="option-boxes">
-          
+        <div class="option-boxes">
+          <div id="option-a-box">option a</div>
+          <div id="option-b-box">option b</div>
+          <div id="option-c-box">option c</div>
+          <div id="option-d-box">option d</div>
+
         </div>
       </div>
       <div id="start-game-button">
