start script.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="timer-box">
         <h3>Current Quiz Time:</h3>
         <h2 id="quiz-timer">0</h2>
-        <p>Every 15 seconds = -1 point penalty!</p>
+        <p>1 Incorrect Answer = -10 second penalty!</p>
       </div>
 
       <div id="score-box">
@@ -31,7 +31,7 @@
     <div class="quiz-boxes">
       <div class="question-and-option-boxes">
         <div id="question-box">
-          <h3>Click 'Start Game' to begin</h3>
+          Click 'Start Game' to begin, you have 30 seconds to answer all questions!
         </div>
         <div class="option-boxes">
           <div id="option-a-box">option a</div>
