--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@
       </div>
     </div>
 
-    <div class="high-score-box">
-      <h2>Leaderboard:</h2>
-      <div id="leader-board-box">
-        <ol>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ol>
+    <div class="user-score-box">
+      <h2>Last Score:</h2>
+      <div id="score-board-box">
+        <h2>Name: </h2>
+        <h2>Score: </h2>
       </div>
     </div>
   </main>
