--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="user-score-box">
       <h2>Last Score:</h2>
       <div id="score-board-box">
-        <h2>Name: </h2>
+        <h2>Initials: </h2>
         <h2>Score: </h2>
       </div>
     </div>
